@@ -2,7 +2,17 @@
 
 
 1. https://github.com/reymont/JVMInPractice
+2. https://github.com/reymont/szjvm.git
 
+```bash
+#java
+javac -encoding UTF-8 geym\zbase\ch2\localvar\LocalVarGC.java
+java -XX:+PrintGC geym.zbase.ch2.localvar.LocalVarGC
+#cmd
+mvn exec:java -Dexec.mainClass="com.gmail.mosoft521.ch02.SimpleArgs"
+#powershell
+mvn exec:java "-Dexec.mainClass=com.gmail.mosoft521.ch02.SimpleArgs"
+ ```
 
 * [在cmd中执行*.class 文件时出现错误: 找不到或无法加载主类？ - 知乎 ](https://www.zhihu.com/question/42593210#answer-33271496)
 * [虚拟机 - 星空的专栏 - CSDN博客 ](http://blog.csdn.net/MINEZHANGHAO/article/category/1911083)
